# ai-exp

./: .env.example  .gitignore  AGENTS.md  BELIEF_GARDENER.md  CHANGELOG.md  CLAUDE.md  DOCUMENTATION_SUMMARY.md  HTTPS_QUICKSTART.md  MCP_SUMMARY.md  MERGE_SUMMARY.md  README-MCP.md  README.md  REMINDER_STASHED_WORK.md  STARTUP_VERIFICATION.md  TODO.md  TODO_TOKEN_TRACKING.md  app.py  astra_response.json  migrate_sessions.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  start_https.sh  test_execute_goal_direct.py  test_persona.py  test_url_fetch.py  test_workspace_integration.py
.claude/: INCIDENT-REPORT-CODE-ACCESS.md
config/: __init__.py  research_config.py  settings.py  system_config.yaml
data/: awareness_state-20251031.ndjson  awareness_state-20251101.ndjson  awareness_state.json  self_knowledge_index.json
docs/: ADAPTIVE_DECISION_FRAMEWORK.md  ADAPTIVE_FRAMEWORK_INTEGRATION.md  ASTRA_CODEBASE_RECONNECT_PLAN.md  ASTRA_COMPLETE_GUIDE.md  ASTRA_EXPLAINED.md  ASTRA_READY_RESEARCH_SYSTEM.md  ASTRA_RESEARCH_ARCHITECTURE.md  AUTONOMOUS_AGENT_ARCHITECTURE_ANALYSIS.md  AWARENESS_LOOP_IMPLEMENTATION.md  AWARENESS_TEST_REPORT.md  BELIEF_MEMORY_SYSTEM_IMPLEMENTATION.md  BELIEF_SYSTEM_INTEGRATION_ISSUES.md  BELIEF_SYSTEM_STATUS.md  CALL_BUDGETING_INTEGRATION.md  CODER_AGENT_IMPLEMENTATION_PLAN.md  DATABASE_MIGRATION_PHASE1.md  EXECUTE_GOAL_QUICK_REF.md  GOAL_STORE_USAGE.md  HTN_BELIEF_DECOMPOSER_DESIGN.md  HTN_BELIEF_DECOMPOSER_IMPLEMENTATION_PLAN.md  HTTPS_SETUP.md  INDEX.md  INTEGRATION_LAYER_SPEC.md  INTROSPECTION_SYSTEM.md  MCP_ARCHITECTURE.md  (+34 more)
(+340 files in other folders)
